bpo-32282: Properly gate the include of `VersionHelpers.h` on Windows

`_MSC_VER` is insufficient to detect this header's presence, it's also important to ensure the XP-compatible toolset is not in use.